# go-diff

./: README.md  pyproject.toml
go_diff/: __init__.py  go_diff.py
scripts/: heptamer.py  heptamer_ffg.py  heptamer_transfer.py  stepped_Pt.py  stepped_Pt_T0.02.ckpt
utils/: utils.py
