[project]
name = "GO-Diff"
version = "0.0.1"
description = "GO-Diff"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch<2.5.0",
    "lightning",
    "torch_geometric",
    "torch-ema",
    "tensorboard",
    "numpy<2",
    "ase",
    "rich-click>=1.8.3",
    "schnetpack",
    "AGeDi",
]


# test = [
#     "pytest>=7.0.1",
#     "pytest-cov>=5.0.0",
#     "ruff>=0.6.5",
#     "pytest-mock>=3.14.0",
#     "mypy>=1.11.2",
# ]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
